--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
     "gh-pages": "^3.2.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-redux": "^7.2.6",
     "react-scripts": "4.0.3",
+    "redux-saga": "^1.1.3",
+    "redux-saga-effects": "^1.1.0",
     "styled-components": "^5.3.3",
     "web-vitals": "^1.1.2"
   },
